@@ -92,6 +92,15 @@ describe Webrat::Configuration do
     it 'should default selenium browser key to *firefox' do
       @config.selenium_browser_key.should == '*firefox'
     end
+    
+    it 'should default selenium browser startup timeout to 5 seconds' do
+      @config.selenium_browser_startup_timeout.should == 5
+    end
+    
+    it 'should allow overriding of the browser startup timeout' do
+      @config.selenium_browser_startup_timeout = 10
+      @config.selenium_browser_startup_timeout.should == 10
+    end
   end
 
 end
